--- a/css/headermain.css
+++ b/css/headermain.css
@@ -117,7 +117,7 @@ header {
     flex-direction: column;
     max-width: 460px;
     justify-content: space-between;
-    border: red 1px solid;
+    /* border: red 1px solid; */
     height: 322px;
     margin: auto;
 
