fix: project shelter

--- a/css/headermain.css
+++ b/css/headermain.css
@@ -7,8 +7,8 @@
     /* background: linear-gradient(to bottom right, #F1CDB3, 5%, black); */
 
     /* start-screen-gradient-background */
-
-    background: #292929;
+    background: radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+    
 }
 
 
